--- a/Pokemon/client/src/styles/main.css
+++ b/Pokemon/client/src/styles/main.css
@@ -13,7 +13,7 @@ body {
 
 .menu_container {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background: #ecf0f1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -101,6 +101,7 @@ body {
   font-family: "Poppins";
   font-size: 1rem;
   background: transparent;
+  margin-bottom: 1rem;
 }
 
 .menu_container .tabs_div form .input_player:focus, .menu_container .tabs_div form .input_room:focus, .menu_container .tabs_div form .input_player_create:focus {
@@ -159,8 +160,8 @@ body {
 }
 
 .game_container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: auto;
 }
 
 .game_container .game_header {
@@ -198,7 +199,6 @@ body {
 
 .game_container .card-container {
   width: 100%;
-  height: auto;
   background: #ecf0f1;
   -webkit-box-shadow: 0 0 10px 3px #00000050;
           box-shadow: 0 0 10px 3px #00000050;
@@ -245,6 +245,7 @@ body {
   font-size: 1rem;
   font-family: "Poppins";
   border-bottom: 2px solid black;
+  margin-bottom: 1rem;
 }
 
 .game_container .card-container .card_input .num_input:focus {
@@ -252,7 +253,7 @@ body {
 }
 
 .game_container .card-container .card_input .play_btn {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   background: #ffd32a;
 }
 
@@ -382,14 +383,15 @@ body {
   position: absolute;
   top: 0;
   width: 50%;
-  height: 100vh;
+  height: 99vh;
   background: #ecf0f1;
+  border: 2px solid black;
   -webkit-transition: .3s;
   transition: .3s;
+  display: none;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   left: 0;
-  border-right: 2px solid black;
 }
 
 .sidebar1 .chat_body {
@@ -443,6 +445,7 @@ body {
   -webkit-transform: translateX(0%);
           transform: translateX(0%);
   z-index: 10;
+  display: block;
 }
 
 .sidebar1.show .sidebar1_head {
@@ -469,10 +472,12 @@ body {
   position: absolute;
   top: 0;
   width: 50%;
-  height: 100vh;
+  height: 99vh;
   background: #ecf0f1;
+  border: 2px solid black;
   -webkit-transition: .3s;
   transition: .3s;
+  display: none;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   right: 0;
@@ -494,6 +499,7 @@ body {
   z-index: 10;
   -webkit-transform: translateX(0%);
           transform: translateX(0%);
+  display: block;
 }
 
 .sidebar2.show .sidebar2_head {
@@ -519,20 +525,23 @@ body {
 @media screen and (max-width: 768px) {
   .sidebar1 {
     width: 90%;
+    height: 98vh;
   }
   .sidebar2 {
     width: 50%;
+    height: 98vh;
   }
 }
 
 @media screen and (max-width: 508px) {
   .sidebar1 {
     width: 100%;
+    height: 98vh;
   }
 }
 
 .leaderboard {
-  width: 100vw;
+  width: 100%;
   margin: 2rem 0;
   padding: .5rem 1rem;
   overflow: auto;
