--- a/Pokemon/client/src/styles/partials/_game.scss
+++ b/Pokemon/client/src/styles/partials/_game.scss
@@ -13,8 +13,8 @@
 }
 
 .game_container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height:auto;
     // game header
     .game_header{
         padding: .5rem .3rem;
@@ -27,7 +27,6 @@
 // game card
 .card-container {
     width: 100%;
-    height: auto;
     background: $white;
     box-shadow: 0 0 10px 3px #00000050;
     // padding: 10px 20px;
@@ -46,12 +45,13 @@
             font-size: 1rem;
             font-family: "Poppins";
             border-bottom: 2px solid black;
+            margin-bottom: 1rem;
             &:focus{
                 border-bottom: 2px solid royalblue;
             }
         }
         .play_btn{
-            margin-top: 1rem;
+            margin-top: 1.5rem;
             background: $yellow;
         }
     }
