--- a/Pokemon/client/src/styles/partials/_sidebar.scss
+++ b/Pokemon/client/src/styles/partials/_sidebar.scss
@@ -2,9 +2,11 @@
     position: absolute;
     top: 0;
     width: 50%;
-    height: 100vh;
+    height: 99vh;
     background: $white;
+    border: 2px solid black;
     transition: .3s;
+    display: none;
 }
 @mixin flex($direction, $justify, $align) {
     display: flex;
@@ -23,7 +25,6 @@
     @include sidebar();
     transform: translateX(-100%);
     left: 0;
-    border-right: 2px solid black;
     .chat_body{
         margin-top: 1rem;
         width: 100%;
@@ -57,6 +58,7 @@
 .sidebar1.show{
     transform: translateX(0%);
     z-index: 10;
+    display: block;
     .sidebar1_head{
         @include sidebar_head();
     }
@@ -81,6 +83,7 @@
 .sidebar2.show{
     z-index: 10;
     transform: translateX(0%);
+    display: block;
     .sidebar2_head{
         @include sidebar_head();
     }
@@ -88,13 +91,16 @@
 @media screen and (max-width:768px){
     .sidebar1{
         width: 90%;
+        height: 98vh;
     }
     .sidebar2{
         width: 50%;
+        height: 98vh;
     }
 }
 @media screen and (max-width:508px){
     .sidebar1{
         width: 100%;
+        height: 98vh;
     }
 }
