--- a/Pokemon/client/src/styles/partials/_sidebar.scss
+++ b/Pokemon/client/src/styles/partials/_sidebar.scss
@@ -89,7 +89,7 @@
     }
 }
 @media screen and (max-width:768px){
-    .sidebar1{
+    .sidebar1, .sidebar1.show{
         width: 90%;
         height: 98vh;
     }
@@ -99,7 +99,7 @@
     }
 }
 @media screen and (max-width:508px){
-    .sidebar1{
+    .sidebar1, .sidebar1.show{
         width: 100%;
         height: 95vh;
     }
