--- a/Pokemon/client/src/styles/partials/_game.scss
+++ b/Pokemon/client/src/styles/partials/_game.scss
@@ -28,6 +28,7 @@
 .card-container {
     width: 100%;
     background: $white;
+    padding: 1rem .5rem;
     box-shadow: 0 0 10px 3px #00000050;
     // padding: 10px 20px;
     @include flex(none, space-around, center);
@@ -58,7 +59,6 @@
     .card {
         flex: 1;
         padding: 5px 10px;
-        border: 2px solid silver;
         display: flex;
         flex-direction: column;
         box-shadow: 0 0 7px 2px #f5f5f54b;
@@ -90,24 +90,9 @@
         }
         h1 span,
         h3 span {
-            font-family: cursive;
+            font-family: "Poppins";
             text-shadow: 1px 1px 2px black;
         }
-        input {
-            outline: none;
-            padding: 3px;
-            border: none;
-            border-bottom: 2px solid #2f3542;
-            background: transparent;
-            color: #ff4757;
-            font-weight: 600;
-            &::placeholder {
-                font-weight: 400;
-                letter-spacing: 1px;
-                word-spacing: 2px;
-                color: #ff4757;
-              }
-            }
         }
     }
 }
@@ -124,8 +109,3 @@
   // sidebars
 @import "./sidebar";
 @import "./leaderboard";
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-  }
-  
