--- a/Pokemon/client/src/styles/main.scss
+++ b/Pokemon/client/src/styles/main.scss
@@ -6,7 +6,7 @@
 body{
     font-size: 62.5%;
     font-family: "Poppins";
-    overflow: hidden;
+    overflow-x: hidden;
 }
 @import "./partials/vars";
 @import "./partials/mainMenu";
