--- a/Pokemon/client/src/styles/partials/_sidebar.scss
+++ b/Pokemon/client/src/styles/partials/_sidebar.scss
@@ -89,18 +89,23 @@
     }
 }
 @media screen and (max-width:768px){
-    .sidebar1, .sidebar1.show{
+    .sidebar1{
         width: 90%;
-        height: 98vh;
+        height: 100vh;
+    }
+    .sidebar1 .chat_body{
+        height: 95%;
     }
     .sidebar2{
         width: 50%;
-        height: 98vh;
+        height: 100vh;
     }
 }
 @media screen and (max-width:508px){
     .sidebar1, .sidebar1.show{
         width: 100%;
-        height: 95vh;
+    }
+    .sidebar1 .chat_body{
+        height: 87%;
     }
 }
